--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,123 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 50px;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+#content {
+  display: flex;
+  z-index: 3000;
+  position: center;
+  width: 40vw;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  margin-bottom: -30px;
+}
+
+#phones {
+  height: auto;
+  width: auto;
+  padding-right: 50px;
+}
+
+#logo-header {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  align-items: center;
+}
+
+#logo {
+  height: 50px;
+  width: 200px;
+}
+
+.home-icon {
+  padding: 0px !important;
+}
+
+.login-button {
+  background-color: #1c5380;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80px;
+  padding: 16px;
+  height: 10px;
+  border-radius: 3px;
+  flex-direction: row-reverse;
+}
+.login-button:hover {
+  background-color: blue;
+}
+
+.login-button p {
+  color: white;
+  font-weight: 500;
+}
+
+#text {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 20px;
+  z-index: 9;
+  justify-content: space-around;
+}
+
+h1 {
+  color: #06365f;
+  text-align: left;
+}
+
+p {
+  font-size: 10px;
+  text-align: start;
+}
+
+#badges {
+  display: flex;
+  padding-right: 20%;
+}
+
+#iphone {
+  height: auto;
+  width: auto;
+  padding-top: 10%;
+}
+
+#android {
+  height: auto;
+  width: auto;
+  margin-left: 10px;
+  padding-top: 10%;
+}
+
+#footer {
+  display: flex;
+  height: auto;
+  width: auto;
+  justify-content: center;
+  margin-top: 30px;
+  justify-content: flex-end;
+  padding-right: 18%;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  font-size: 10px;
+}
+
+li {
+  justify-content: space-around;
+  color: #1c5380;
+  margin: 8px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
